# Dolos

./: .gitignore  NEW_FEATURES.txt  QUICKSTART.md  README.md  RUN_GUIDE.txt  SOLUTION.md  USAGE_EXAMPLES.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: INTERACTIVE_MODE.md  TECHNICAL.md  USER_GUIDE.md
examples/: basic_usage.py
src/dolos/: __init__.py  __main__.py  cli.py  document_builder.py  metadata_editor.py  metadata_manager.py  models.py  sanitizer.py  text_parser.py  utils.py  xml_injector.py
tests/: __init__.py  test_metadata_manager.py  test_text_parser.py  test_utils.py
